redid the search page, added icon to search, fixed alignment issues on mobile navbar, fixed issue with dropdown on navbar being crunched together

--- a/src/styling/NavigationBar.css
+++ b/src/styling/NavigationBar.css
@@ -21,5 +21,13 @@
 }
 
 .navbar-nav {
-    height: 43px  !important;
+    height: 43px;
 }
+
+/*When screen size is smaller than this, height:auto */
+ @media (max-width: 575.98px) { 
+    .navbar-nav {
+        height: auto;
+    }
+
+  }
